preprocessor doesnt handle #-directives if in string/comment or not first token in line; added pp to fuzzer

--- a/fuzzer/Cargo.toml
+++ b/fuzzer/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2021"
 
 [dependencies]
 afl = "*"
-
-[dependencies.compiler]
-path = "../compiler"
+preprocessor = { path = "../preprocessor/" }
+compiler = { path = "../compiler/" }
