--- a/wrecc_compiler/Cargo.toml
+++ b/wrecc_compiler/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "preprocessor"
+name = "wrecc_compiler"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-compiler = { path = "../compiler" }
 
 [lib]
-name = "preprocessor"
+name = "wrecc_compiler"
 path = "src/lib.rs"
