--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-preprocessor = { path = "./preprocessor/" }
-compiler = { path = "./compiler/" }
+wrecc_compiler = { path = "./wrecc_compiler/" }
 
 [[bin]]
 name = "wrecc"
@@ -15,8 +14,7 @@ path = "src/main.rs"
 
 [workspace]
 members = [
-  "preprocessor",
-  "compiler"
+  "wrecc_compiler"
 ]
 
 exclude = [
