--- a/wrecc_compiler/Cargo.toml
+++ b/wrecc_compiler/Cargo.toml
@@ -2,6 +2,10 @@
 name = "wrecc_compiler"
 version = "0.1.0"
 edition = "2021"
+authors = ["Philipp Rados"]
+license = "MIT"
+
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
