--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,8 @@ jobs:
   test:
     strategy:
       matrix:
-        # have to use macos-13 because newer versions are arm-based
-        os: [ubuntu-latest, macos-13]
+        # check on macos-13 (x86) and macos-latest (ARM through Rosetta)
+        os: [ubuntu-latest, macos-13, macos-latest]
 
     runs-on: ${{ matrix.os }}
 
